move styles to SVG for better export
Signed-off-by: Junliang Huang <i@jhuang.me>

--- a/index.html
+++ b/index.html
@@ -26,7 +26,67 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app" unresolved>
+    <svg xmlns="http://www.w3.org/2000/svg">
+      <style>
+      svg {
+         background-color: white;
+         font-family: 'Avenir Next', 'Noto Sans', 'Segoe UI';
+      }
+
+      .axis {
+         stroke: white;
+         fill: white;
+         stroke-width: 3px;
+      }
+
+      line.tick {
+        stroke: #ccc;
+        stroke-width: 1px;
+      }
+
+      text {
+          text-anchor: middle;
+          user-select: none;
+      }
+      text.title {
+         font-size: 2rem;
+         text-align: center;
+         dominant-baseline: central;
+      }
+      text.months {
+        text-anchor: start;
+      }
+      text.months, text.temp {
+       fill: #ccc;
+       font-size: 1.3vh;
+       dominant-baseline: central;
+      }
+
+      text.footnote {
+        font-size: 1.8vh;
+        fill: #ccc;
+        text-anchor: end;
+      }
+
+      circle.axis {
+         stroke: none;
+         stroke-width: 1px;
+         fill: none;
+      }
+
+      circle.axis.record {
+         stroke: #ccc;
+         stroke-width: 1.2px;
+         opacity: 0.5;
+      }
+
+      circle.precipitation {
+         fill: rgba(186,201,223,0.4)
+      }
+      </style>
+    </svg>
+  </div>
   <script src="//cdn.bootcss.com/d3/3.5.16/d3.min.js"></script>
   <script src="//cdn.bootcss.com/moment.js/2.11.2/moment.min.js"></script>
   <script src="app.js"></script>
