add saveAs SVG support
Signed-off-by: Junliang Huang <i@jhuang.me>

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
   </div>
   <script src="//cdn.bootcss.com/d3/3.5.16/d3.min.js"></script>
   <script src="//cdn.bootcss.com/moment.js/2.11.2/moment.min.js"></script>
+  <script src="//cdn.bootcss.com/mousetrap/1.4.6/mousetrap.min.js"></script>
+  <script src="//cdn.bootcss.com/FileSaver.js/2014-11-29/FileSaver.min.js"></script>
   <script src="app.js"></script>
 </body>
 
