use fill-opacity instead of fill with rgba values
Signed-off-by: Junliang Huang <i@jhuang.me>

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       }
 
       circle.precipitation {
-         fill: rgba(186,201,223,0.4)
+         fill: #bac9df;
+         fill-opacity: 0.4;
       }
       </style>
     </svg>
