feat: tune precipitation color

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       }
 
       circle.precipitation {
-         fill: #bac9df;
-         fill-opacity: 0.4;
+         fill: #7db1df;
+         fill-opacity: 0.3;
       }
       </style>
     </svg>
