--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <style>
       svg {
          background-color: white;
-         font-family: 'Avenir Next', 'Noto Sans', 'Segoe UI';
+         font-family: system-ui, 'Avenir Next', 'Noto Sans', 'Segoe UI';
       }
 
-      .axis {
+      .axis-line {
          stroke: white;
          fill: white;
          stroke-width: 3px;
@@ -56,7 +56,7 @@
       text.months {
         text-anchor: start;
       }
-      text.months, text.temp {
+      text.months, text.temperature-label {
        fill: #ccc;
        dominant-baseline: central;
       }
@@ -85,10 +85,10 @@
       </style>
     </svg>
   </div>
-  <script src="//cdn.bootcss.com/d3/4.10.0/d3.min.js"></script>
-  <script src="//cdn.bootcss.com/moment.js/2.11.2/moment.min.js"></script>
-  <script src="//cdn.bootcss.com/mousetrap/1.4.6/mousetrap.min.js"></script>
-  <script src="//cdn.bootcss.com/FileSaver.js/2014-11-29/FileSaver.min.js"></script>
+  <script src="https://cdn.bootcss.com/d3/4.10.0/d3.min.js"></script>
+  <script src="https://cdn.bootcss.com/moment.js/2.11.2/moment.min.js"></script>
+  <script src="https://cdn.bootcss.com/mousetrap/1.4.6/mousetrap.min.js"></script>
+  <script src="https://cdn.bootcss.com/FileSaver.js/2014-11-29/FileSaver.min.js"></script>
   <script src="app.js"></script>
 </body>
 
