fix: FOUS regression

--- a/index.html
+++ b/index.html
@@ -23,17 +23,10 @@
   <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <title>The days</title>
-  <style>
-    #app {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  </style>
 </head>
 
 <body>
-  <div id="app">
+  <div id="app" unresolved>
     <svg xmlns="http://www.w3.org/2000/svg">
       <style>
       svg {
