fix: tune styles

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           user-select: none;
       }
       text.title {
+        color: #333;
          text-align: center;
          dominant-baseline: central;
       }
@@ -57,7 +58,7 @@
         text-anchor: start;
       }
       text.months, text.temperature-label {
-       fill: #ccc;
+       fill: #ddd;
        dominant-baseline: central;
       }
 
@@ -67,20 +68,15 @@
       }
 
       circle.axis {
-         stroke: none;
-         stroke-width: 1px;
-         fill: none;
-      }
-
-      circle.axis.record {
-         stroke: #ccc;
-         stroke-width: 1.2px;
-         opacity: 0.5;
+        stroke: #ddd;
+        fill: none;
+        stroke-width: 1px;
+        stroke-opacity: 0.5;
       }
 
       circle.precipitation {
-         fill: #7db1df;
-         fill-opacity: 0.3;
+         fill: #489cdf;
+         fill-opacity: 0.2;
       }
       </style>
     </svg>
