styles(app): tune title styles

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
           user-select: none;
       }
       text.title {
-        color: #333;
-         text-align: center;
-         dominant-baseline: central;
+        fill: rgba(0, 0, 0, 0.4);
+        font-weight: 700;
+        text-align: center;
+        dominant-baseline: central;
       }
       text.months {
         text-anchor: start;
